--- a/src/master.css
+++ b/src/master.css
@@ -4,7 +4,6 @@
 }
 
 body {
-    overflow-y: hidden;
 	background: #000;
 	margin: 0;
 }
@@ -33,6 +32,7 @@ nav > a:hover {
 }
 
 #home-section {
+    height: 10vh;
     margin-top: 18%;
     margin-left: 33%;
     font-size: 34px;
@@ -41,8 +41,31 @@ nav > a:hover {
 }
 
 #letter-section {
-    width: 100%;
-    height: 7vh;
+    height: 10vh;
+    margin-top: 18%;
+    margin-left: 33%;
+    font-size: 34px;
+    color: white;
+    text-align: center;
+}
+
+#photos-section {
+    height: 10vh;
+    margin-top: 8%;
+}
+
+#photos-section > img {
+    margin: 10px;
+    width: 200px;
+    height: 250px;
+    object-fit: cover;
+    border: solid white;
+    border-width: 5px 5px 30px 5px;
+    overflow-y: scroll;
+}
+
+.hidden-item {
+    display: none;
 }
 
 canvas {
